<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/view_edge_gap"
    android:paddingRight="@dimen/view_edge_gap"
    android:gravity="top">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/view_edge_small_gap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|right"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:gravity="center_vertical|start"
            android:layout_marginRight="@dimen/view_edge_small_gap" />

        <EditText
            android:id="@+id/bill_order_et_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:gravity="center_vertical|start"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/view_edge_small_gap"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/view_edge_small_gap"
        android:paddingBottom="@dimen/view_edge_small_gap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|right"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cost"
            android:gravity="center_vertical|start"
            android:layout_marginRight="@dimen/view_edge_small_gap" />

        <EditText
            android:id="@+id/bill_order_et_cost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:gravity="center_vertical|start"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/view_edge_small_gap"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/view_edge_small_gap"
        android:paddingBottom="@dimen/view_edge_small_gap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|right"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/share"
            android:gravity="center_vertical|start"
            android:layout_marginRight="@dimen/view_edge_small_gap" />

        <EditText
            android:id="@+id/bill_order_et_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:gravity="center_vertical|start"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/view_edge_small_gap"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/view_edge_small_gap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|right"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/subtotal"
            android:gravity="center_vertical|start"
            android:layout_marginRight="@dimen/view_edge_small_gap" />

        <TextView
            android:id="@+id/bill_order_subtotal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/view_edge_small_gap"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginRight="@dimen/view_edge_small_gap" />

    </TableRow>

</TableLayout>