<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/view_edge_small_gap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|right"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:gravity="center_vertical|start"
            android:layout_marginRight="@dimen/view_edge_small_gap" />

        <EditText
            android:id="@+id/bill_et_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:gravity="center_vertical|start"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/view_edge_small_gap"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/bill_order_list_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/view_edge_small_gap"
        android:paddingBottom="@dimen/view_edge_small_gap" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/view_edge_small_gap"
        android:paddingBottom="@dimen/view_edge_small_gap" >

        <Button
            android:id="@+id/bill_order_append_button"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:text="@string/button_append"
            android:layout_weight="1"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:ellipsize="marquee" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/view_edge_small_gap"
        android:paddingBottom="@dimen/view_edge_small_gap" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/view_edge_small_gap"
            android:paddingBottom="@dimen/view_edge_small_gap">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/view_edge_small_gap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|right"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/subtotal"
                    android:gravity="center_vertical|start"
                    android:layout_marginRight="@dimen/view_edge_small_gap" />

                <TextView
                    android:id="@+id/bill_subtotal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/view_edge_small_gap"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/view_edge_small_gap"
                android:paddingBottom="@dimen/view_edge_small_gap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|right"
                    android:gravity="center_vertical|start"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tax"
                    android:layout_marginRight="@dimen/view_edge_small_gap" />

                <ToggleButton
                    android:id="@+id/bill_toggle_tax"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/view_edge_small_gap"
                    android:layout_marginRight="@dimen/view_edge_small_gap"
                    android:textOff="@string/tax_tip_val_percent"
                    android:textOn="@string/tax_tip_val_absolute" />

                <EditText
                    android:id="@+id/bill_et_tax_per_val"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left|center_vertical"
                    android:gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/view_edge_small_gap"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginRight="@dimen/view_edge_small_gap" />

                <EditText
                    android:id="@+id/bill_et_tax_abs_val"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left|center_vertical"
                    android:gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/view_edge_small_gap"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/view_edge_small_gap"
                android:paddingBottom="@dimen/view_edge_small_gap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|right"
                    android:gravity="center_vertical|start"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tip"
                    android:layout_marginRight="@dimen/view_edge_small_gap" />

                <ToggleButton
                    android:id="@+id/bill_toggle_tip"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/view_edge_small_gap"
                    android:layout_marginRight="@dimen/view_edge_small_gap"
                    android:textOff="@string/tax_tip_val_percent"
                    android:textOn="@string/tax_tip_val_absolute" />

                <EditText
                    android:id="@+id/bill_et_tip_per_val"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="top|left"
                    android:gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/view_edge_small_gap"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginRight="@dimen/view_edge_small_gap" />

                <EditText
                    android:id="@+id/bill_et_tip_abs_val"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="top|left"
                    android:gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/view_edge_small_gap"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/view_edge_small_gap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|right"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/total"
                    android:gravity="center_vertical|start"
                    android:layout_marginRight="@dimen/view_edge_small_gap" />

                <TextView
                    android:id="@+id/bill_total"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/view_edge_small_gap"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/view_edge_small_gap" >

        <Button
            android:id="@+id/bill_update_button"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:text="@string/button_update"
            android:layout_weight="1"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:ellipsize="marquee" />

    </LinearLayout>

    <EditText
        android:id="@+id/bill_et_hidden"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:enabled="false">
        <requestFocus />
    </EditText>

</LinearLayout>