<?xml version="1.0" encoding="utf-8"?>
<com.yagodar.android.custom.widget.CheckableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bill_row_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bp_selectable_item_background"
    android:clickable="true"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/view_edge_gap"
    android:paddingTop="@dimen/view_edge_gap">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/view_edge_small_gap"
        android:paddingTop="@dimen/view_edge_small_gap">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/view_edge_small_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="@dimen/view_edge_small_gap"
                android:gravity="center_vertical|start"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/bill_et_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/view_edge_small_gap"
                android:layout_marginRight="@dimen/view_edge_small_gap"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/view_edge_small_gap"
            android:paddingTop="@dimen/view_edge_small_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="@dimen/view_edge_small_gap"
                android:gravity="center_vertical|start"
                android:text="@string/tax"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/bill_tax_val"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/view_edge_small_gap"
                android:layout_marginRight="@dimen/view_edge_small_gap"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/bill_tax_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/view_edge_small_gap"
                android:layout_marginRight="@dimen/view_edge_small_gap"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/view_edge_small_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="@dimen/view_edge_small_gap"
                android:gravity="center_vertical|start"
                android:text="@string/tip"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/bill_tip_val"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/view_edge_small_gap"
                android:layout_marginRight="@dimen/view_edge_small_gap"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/bill_tip_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/view_edge_small_gap"
                android:layout_marginRight="@dimen/view_edge_small_gap"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

    </TableLayout>
</com.yagodar.android.custom.widget.CheckableLinearLayout>